<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_normal"
        android:textSize="16sp" />

    <com.example.customTextView.TypefacedTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="16sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_normal"/>

    <com.example.customTextView.TypefacedEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit"/>

    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOn="@string/toggle_normal"/>

    <com.example.customTextView.TypefacedToggleButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:textOn="@string/toggle"/>

</LinearLayout>